# esp-hal-multiconfig-example

./: README.md
multiconfig/: Cargo.toml  README.md
multiconfig/.cargo/: config.toml  config_a.toml  config_b.toml
multitarget/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
multitarget/.cargo/: config.toml  config_esp32.toml  config_esp32_psram.toml  config_esp32c6.toml
