[package]
edition = "2021"
name    = "multiconfig"
version = "0.1.0"

[[bin]]
name = "multiconfig"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32c6",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

# We only patch the crates to make this work with the not yet release esp-config TUI
[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
